// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`合并有序顺序表 其中有一个为空 1`] = `
SingleLinkList {
  "head": Node {
    "data": 1,
    "next": Node {
      "data": 3,
      "next": Node {
        "data": 5,
        "next": null,
      },
    },
  },
  "len": 3,
}
`;

exports[`合并有序顺序表 合并成功应该返回l1 1`] = `
SingleLinkList {
  "head": Node {
    "data": 1,
    "next": Node {
      "data": 2,
      "next": Node {
        "data": 3,
        "next": Node {
          "data": 4,
          "next": Node {
            "data": 5,
            "next": Node {
              "data": 6,
              "next": null,
            },
          },
        },
      },
    },
  },
  "len": 3,
}
`;

exports[`合并有序顺序表 合并成功应该返回l2 1`] = `
SingleLinkList {
  "head": Node {
    "data": 1,
    "next": Node {
      "data": 2,
      "next": Node {
        "data": 3,
        "next": Node {
          "data": 4,
          "next": Node {
            "data": 5,
            "next": Node {
              "data": 6,
              "next": null,
            },
          },
        },
      },
    },
  },
  "len": 3,
}
`;
